# varnishls

./: .editorconfig  .gitignore  .lefthook.yml  Cargo.toml  Makefile  README.md  build.rs  grammar.js  package-lock.json  package.json  test.vcl  vcc.pest
.github/workflows/: ci.yaml  release.yaml
queries/: highlights.scm  injections.scm
src/: backend.rs  config.rs  document.rs  formatter.rs  lib.rs  main.rs  parser.rs  safe_regex.rs  static_autocomplete_items.rs  varnish_builtins.rs  vcc.rs  vmod.rs
src/formatter_queries/: autofix_else_if.scm  downcase_headers.scm  else_if.scm  ifs_loose.scm  ifs_tight.scm  main.scm
src/formatter_tests/: 001_basic.vcl  002_new_statements.vcl  004_large_ifs_tight.vcl  005_huge_func_args.vcl  006_autofix_else_if.vcl  006_fix_else_if.vcl  007_downcase_headers.vcl  008_bytes_bug.vcl
src/lint_tests/: should_error_when_req_in_befetch.vcl  should_warn_on_upcase_headers.vcl  should_warn_prefer_else_if.vcl
src/snapshots/: varnishls__document__tests__lint_tests@should_error_when_req_in_befetch.vcl.snap  varnishls__document__tests__lint_tests@should_warn_on_upcase_headers.vcl.snap  varnishls__document__tests__lint_tests@should_warn_prefer_else_if.vcl.snap  varnishls__formatter__tests__snapshots@001_basic.vcl.snap  varnishls__formatter__tests__snapshots@002_new_statements.vcl.snap  varnishls__formatter__tests__snapshots@003_large_ifs_loose.vcl.snap  varnishls__formatter__tests__snapshots@004_large_ifs_tight.vcl.snap  varnishls__formatter__tests__snapshots@005_huge_func_args.vcl.snap  varnishls__formatter__tests__snapshots@006_autofix_else_if.vcl.snap  varnishls__formatter__tests__snapshots@006_fix_else_if.vcl.snap  varnishls__formatter__tests__snapshots@007_downcase_headers.vcl.snap  varnishls__formatter__tests__snapshots@008_bytes_bug.vcl.snap
