[package]
name = "varnishls"
version = "0.1.0"
license = "LGPL-3.0-or-later"
edition = "2021"
authors = ["martin@m4r7.in"]
keywords = ["lsp", "language-server", "varnish"]
categories = ["development-tools"]
description = "Varnish language server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ropey = "1.6"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
# pest = "2.5.6"
# pest_derive = "2.5.6"
tree-sitter = "0.20"
tree-sitter-vcl = { path = "vendor/tree-sitter-vcl" }
tree-sitter-vtc = { path = "vendor/tree-sitter-vtc" }
simplelog = "0.12.1"
log = "0.4.17"
clap = { version = "4.2.1", features = ["derive"] }
toml = "0.7.3"
regex-syntax = { version = "0.7", features = ["std"], default-features = false }
ansi_term = "0.12.1"
dashmap = { version = "5.5.3", features = ["inline"] }

[build-dependencies]
cc = "1.0"
# pkg-config = "0.3.22"
# bindgen = "0.64.0"
