[package]
name = "varnishls"
version = "0.1.0"
license = "LGPL-3.0-or-later"
edition = "2021"
authors = ["martin@m4r7.in"]
keywords = ["lsp", "language-server", "varnish"]
categories = ["development-tools"]
description = "Varnish language server"

[dependencies]
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ropey = "1.6"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
dashmap = { version = "5.5.3", features = ["inline"] }
tree-sitter = "0.20"
tree-sitter-vcl = { path = "vendor/tree-sitter-vcl" }
tree-sitter-vtc = { path = "vendor/tree-sitter-vtc" }
simplelog = "0.12.1"
log = "0.4.17"
clap = { version = "4.2.1", features = ["derive"] }
toml = "0.8"
regex-syntax = { version = "0.8", features = ["std"], default-features = false }
ansi_term = "0.12.1"
topiary-core = "0.4.0"

[build-dependencies]
cc = "1.0"

[features]
default = []
varnish7 = []

[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
